--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -5,7 +5,7 @@
       <!-- Image Column -->
       <div class="col-sm-4 p-1 text-center">
         <div data-turbo="false">
-          <%= link_to image_tag(produit.default_image, class: "img-fluid"), produit_path(produit)  %>
+          <%= link_to image_tag(produit.default_image, class: "img-fluid img-produit"), produit_path(produit)  %>
         </div>
       </div>
       <!-- Text Column -->
@@ -48,7 +48,35 @@
                 <% end %>
                 
               <% end %>
-              <%= links_record(produit) %>  
+
+              <% if controller_name == "etiquettes"  && action_name == "index" %> 
+                <div class="container text-end">
+
+                  <% if session[:selection_etiquettes].count < 4 %>
+                    
+                    <%= form_with url: update_selection_etiquettes_path, method: :post, local: true, data: { turbo: false } do |form| %>
+                      <%= form.hidden_field :new_product, value: produit.id %>
+                        <button type="submit" class="btn btn-warning my-4">
+                          <span class="fw-bold ms-2"> Sélection étiquette</span>
+                          <i class="fa-solid fa-xl fa-tags"></i> 
+                        </button>
+                    <% end %>
+                  
+                  <% else %>
+
+                    <%= link_to etiquettes_path, class: "btn btn-secondary my-4" do %>
+                      <span class="fw-bold ms-2"> Limite atteinte</span>
+                      <i class="fa-solid fa-xl fa-tags"></i> 
+                    <% end %>
+                    
+                  
+                  <% end %>
+                  
+                  
+                </div>           
+              <% else %>
+                <%= links_record(produit) %>  
+              <% end %>
             </div>
           </p>
         </div>
