--- a/app/views/avoir_rembs/_avoir_remb.html.erb
+++ b/app/views/avoir_rembs/_avoir_remb.html.erb
@@ -8,16 +8,19 @@
 
         <div class="col">
         
-          <strong>Type:</strong>
-          <%= avoir_remb.type_avoir_remb %>
-
-          <strong>Montant:</strong>
+          <strong>
+            <%= avoir_remb.type_avoir_remb %>
+          </strong>
+          de
           <%= custom_currency_no_decimals_format(avoir_remb.montant) %>
 
           <% if avoir_remb.nature.present? %>
-            <strong>Nature:</strong>
+            Nature: 
             <%= avoir_remb.nature %>            
           <% end %>
+
+          <%= "le #{avoir_remb.custom_date.strftime("%d/%m/%Y")}" if avoir_remb.custom_date.present? %>
+
 
           <%= link_to "", "#collapseAvoir_remb#{dom_id(avoir_remb)}", class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseAvoir_remb#{dom_id(avoir_remb)}" %>
 
