--- a/app/views/paiement_recus/_form.html.erb
+++ b/app/views/paiement_recus/_form.html.erb
@@ -13,16 +13,16 @@
       </div>
     <% end %>
 
-    <div class="mx-1 px-2">
-      <div class="input-group input-group">
-        <%= form.label :typepaiement, class: "input-group-text" %>
+    <div class="m-1">
+      <div class="input-group">
+        <%= form.label :typepaiement, "Type paiement", class: "input-group-text" %>
         <%= form.select :typepaiement, PaiementRecu::TYPE_PAIEMENT,
         { include_blank: 'Sélectionner' }, class: "form-select" %>
       </div>
     </div>
     
-    <div class="mx-1 px-2">
-      <div class="input-group input-group">
+    <div class="m-1">
+      <div class="input-group">
         <%= form.label :moyen, class: "input-group-text" %>
         <%= form.select :moyen, PaiementRecu::MOYEN_PAIEMENT,
         { include_blank: 'Sélectionner' }, class: "form-select" %>
@@ -33,6 +33,14 @@
       [:montant, :number_field],
       [:commentaires, :text_area] )
     %>
+
+    <div class="m-1">
+      <div class="input-group">
+        <%= form.label :custom_date, "Date", class: "input-group-text" %>
+        <%= form.date_field :custom_date, value: paiement_recu.custom_date || Date.current, class: "form-control" %>
+      </div>
+    </div>
+
 
     <%= form.hidden_field :commande_id, value: commande_id %>
 
