--- a/app/views/pdf_commande/_avoirrembs.html.erb
+++ b/app/views/pdf_commande/_avoirrembs.html.erb
@@ -18,7 +18,7 @@
               <tr>
                 <td class="td-doc centered"> <%= i + 1 %> </td>
                 <td class="td-doc centered"> <%= avoirremb.type_avoir_remb %> </td>
-                <td class="td-doc centered"> <%= avoirremb.created_at.strftime("%d/%m/%y")  %> </td>
+                <td class="td-doc centered"> <%= avoirremb.custom_date.strftime("%d/%m/%y")  %> </td>
                 <td class="td-doc centered"> <%= custom_currency_format(avoirremb.montant) %> </td>
               </tr> 
             <% end %>
