--- a/app/views/pdf_commande/_paiements.html.erb
+++ b/app/views/pdf_commande/_paiements.html.erb
@@ -24,7 +24,7 @@
           <tr>
             <td class="td-doc-valeurs centered"> <%= i + 1 %> </td>
             <td class="td-doc centered"> <%= paiement.moyen %> </td>
-            <td class="td-doc centered"> <%= paiement.created_at.strftime("%d/%m/%y") %> </td>
+            <td class="td-doc centered"> <%= paiement.custom_date.strftime("%d/%m/%y") %> </td>
             <td></td>
             <td class="td-doc-valeurs ended">  <%= custom_currency_format(paiement.montant) if paiement.typepaiement == "prix" %> </td>
             <td class="td-doc-valeurs ended">  <%= custom_currency_format(paiement.montant)  if paiement.typepaiement == "caution" %> </td>
