--- a/app/views/pdf_commande/_avoirrembs.html.erb
+++ b/app/views/pdf_commande/_avoirrembs.html.erb
@@ -18,7 +18,7 @@
               <tr>
                 <td class="td-doc centered"> <%= i + 1 %> </td>
                 <td class="td-doc centered"> <%= avoirremb.type_avoir_remb %> </td>
-                <td class="td-doc centered"> <%= avoirremb.custom_date.strftime("%d/%m/%y")  %> </td>
+                <td class="td-doc centered"> <%= avoirremb.custom_date.strftime("%d/%m/%y") if avoirremb.custom_date.present? %> </td>
                 <td class="td-doc centered"> <%= custom_currency_format(avoirremb.montant) %> </td>
               </tr> 
             <% end %>
@@ -28,7 +28,7 @@
             <tr>
               <td colspan=3 class="tfoot-doc">  TOTAUX  </td>
               <td class="tfoot-doc centered"> 
-                <%= custom_currency_format(recu_caution(@doc_edition.commande)) %> 
+                <%= custom_currency_format(avoir_deduit(@doc_edition.commande) - remb_deduit(@doc_edition.commande)) %> 
               </td>
             </tr>
           </tfoot>
