change icons to use bs

--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="card m-2 shadow-sm">
 
   <div class="card-header bg-dark text-light text-center">
-    <i class="fa fa-xl brand-colored fa fa-chart-line ms-1 me-3"></i>
+    <i class="bi bi-xl brand-colored bi bi-graph-up-arrow ms-1 me-3"></i>
     <strong>Analyses</strong> 
   </div> 
 
