--- a/app/views/avoir_rembs/_avoir_remb.html.erb
+++ b/app/views/avoir_rembs/_avoir_remb.html.erb
@@ -22,7 +22,7 @@
           <%= "le #{avoir_remb.custom_date.strftime("%d/%m/%Y")}" if avoir_remb.custom_date.present? %>
 
 
-          <%= link_to "", "#collapseAvoir_remb#{dom_id(avoir_remb)}", class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseAvoir_remb#{dom_id(avoir_remb)}" %>
+          <%= link_to "", "#collapseAvoir_remb#{dom_id(avoir_remb)}", class: "btn btn-sm btn-outline-primary bi bi-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseAvoir_remb#{dom_id(avoir_remb)}" %>
 
         </div>
 
