--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -11,7 +11,7 @@
           <%= custom_badge("", "", "", "", client.propart) %>
 
           <%= link_to "", "#collapseClient#{dom_id(client)}", 
-                class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+                class: "btn btn-sm btn-outline-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
                 role: "button", "aria-expanded": "false", "aria-controls": "collapseClient#{dom_id(client)}" %>
 
         </div>
