--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -6,7 +6,7 @@
   "Commandes", 
   "file-invoice", 
   link_to("", "#collapseNewCommande", 
-  class: "fa fa-plus btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewCommande" })) %>
 
