--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -15,7 +15,7 @@
           <%= custom_badge("", "", "", "", commande.profile&.nom) %>
 
           <%= link_to "", "#collapseCommande#{dom_id(commande)}", 
-            class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+            class: "btn btn-sm btn-outline-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
             role: "button", "aria-expanded": "false", "aria-controls": "collapseCommande#{dom_id(commande)}" %>
 
           <div class="my-2 p-1">
