--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -14,7 +14,7 @@
         </div>
         <div class="col-2 text-end">
             <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-                <i class="fa fa-file"></i>
+                <i class="bi bi-file-earmark-text"></i>
                 <span class="d-none d-md-inline ms-1">editer</span>
             </button>
         </div>
