--- a/app/views/avoir_rembs/_avoir_rembs.html.erb
+++ b/app/views/avoir_rembs/_avoir_rembs.html.erb
@@ -3,7 +3,7 @@
   "money-bill-transfer",
   link_to("", 
   "#collapseNewAAvoirremb", 
-  class: "fa fa-plus btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewAAvoirremb" })) %>
 
