--- a/app/views/clients/_client_mini.html.erb
+++ b/app/views/clients/_client_mini.html.erb
@@ -11,7 +11,7 @@
         <%= custom_badge("fa-phone", "", "", "", client.tel) %>
         <%= custom_badge("fa-at", "", "", "", client.mail) %>
         
-        <%= link_to "", "#collapseClient", class: "btn btn-sm btn-outline-primary fa fa-eye", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
+        <%= link_to "", "#collapseClient", class: "btn btn-sm btn-outline-primary bi bi-eye", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
     </div>
     
     <div class="col-2 text-end">
