--- a/app/views/home_admin/demande_connexion.html.erb
+++ b/app/views/home_admin/demande_connexion.html.erb
@@ -7,13 +7,13 @@
     <% unless current_user.present? %>
 
       <%= link_to new_user_session_path, class: "btn btn-warning m-1 p-2 rounded-pill" do %>
-          <i class="fa fa-solid fa-xl fa-user-lock"></i>
+          <i class="bi bi-person-lock"></i>
           <span class="ms-1 fw-bold">Connexion</span>
       <% end %>
 
 
       <%= link_to new_user_registration_path, class: "btn btn-primary m-1 p-2 rounded-pill" do %>
-        <i class="fa fa-solid fa-xl fa-user-plus"></i>
+        <i class="bi bi-person-add"></i>
         <span class="ms-1 fw-bold">Nouveau</span>
       <% end %>
 
