--- a/app/views/home_admin/index.html.erb
+++ b/app/views/home_admin/index.html.erb
@@ -2,22 +2,22 @@
 <div class="container-fluid m-0 p-0">
   <div class="row m-0 p-0">
     <div class="col-md-6 m-0 p-0">
-      <%= dashboard_card("Clients", clients_path, new_client_path, 'user',
+      <%= dashboard_card("Clients", clients_path, new_client_path, 'person',
             @clients.order(updated_at: :desc).map { |client| { text: client.full_name, path: client_path(client) } } ) %>
     </div>
     <div class="col-md-6 m-0 p-0">
-      <%= dashboard_card("Commandes", commandes_path, new_commande_path, 'file',
+      <%= dashboard_card("Commandes", commandes_path, new_commande_path, 'file-earmark-post',
             @commandes.order(updated_at: :desc).map { |commande| { text: commande.full_name_with_client, path: commande_path(commande) } } )  %>
     </div>
   </div>
 
   <div class="row m-0 p-0">
     <div class="col-md-6 m-0 p-0">
-      <%= dashboard_card("Produits", produits_path, new_produit_path, 'shirt',
+      <%= dashboard_card("Produits", produits_path, new_produit_path, 'person-standing-dress',
             @produits.order(updated_at: :desc).map { |produit| { text: produit.nom, path: produit_path(produit) } } ) %>
     </div>
     <div class="col-md-6 m-0 p-0">
-      <%= dashboard_card("Rendez-vous", meetings_path, meetings_path, 'calendar',
+      <%= dashboard_card("Rendez-vous", meetings_path, meetings_path, 'calendar-date',
             @meetings.order(updated_at: :desc).map { |meeting| { text:  meeting.meeting_info, path: meeting_path(meeting) } } ) %>
     </div>
   </div>
@@ -32,7 +32,7 @@
   <% if user_signed_in? %>
       <div class="container-fluid mt-4 d-flex justify-content-end">
           <%= button_to destroy_user_session_path, method: :delete, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
-              <i class="fa-solid fa-right-from-bracket me-1"></i>
+              <i class="bi bi-box-arrow-left me-1"></i>
               <span class="fw-bold"><%= current_user.role %> </span>
           <% end %>
       </div>
