--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -2,7 +2,7 @@
   "Rendez-vous", 
   "calendar", 
   link_to("", "#collapseNewMeeting", 
-  class: "fa fa-plus btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewMeeting" })) %>
 
