--- a/app/views/paiement_recus/_paiement_recus.html.erb
+++ b/app/views/paiement_recus/_paiement_recus.html.erb
@@ -2,7 +2,7 @@
   "Paiements", 
   "money", 
   link_to("", "#collapseNewPaiement", 
-  class: "fa fa-plus btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewPaiement" })) %>
 
