--- a/app/views/produits/_commandes_liees.html.erb
+++ b/app/views/produits/_commandes_liees.html.erb
@@ -1,7 +1,7 @@
 <div class="card mx-2 my-3 light-beige-colored shadow-sm">
 
     <div class="card-header bg-secondary text-light fw-bold">
-        <i class="fa fa-file-invoice mx-1"></i>
+        <i class="bi bi-file-earmark-post mx-1"></i>
         <span>Commandes liées</span>
     </div>
 
