--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -15,7 +15,7 @@
             <%= produit.nom %>
             <div data-turbo="false">
               <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
-                    class: "btn btn-sm btn-outline-primary fa-solid fa-eye m-1", "data-bs-toggle": "collapse", 
+                    class: "btn btn-sm btn-outline-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
                     role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
             </div>
           </h5>
