--- a/app/views/produits/_stock.html.erb
+++ b/app/views/produits/_stock.html.erb
@@ -1,7 +1,7 @@
 <div class="card mx-2 my-3 light-beige-colored shadow-sm">
 
     <div class="card-header bg-secondary text-light fw-bold">
-        <i class="fa fa-boxes mx-1"></i>
+        <i class="bi bi-boxes mx-1"></i>
         <span>Stock</span>
     </div>
 
