--- a/app/views/selection_produit/index.html.erb
+++ b/app/views/selection_produit/index.html.erb
@@ -14,11 +14,11 @@
         <%= hidden_field_tag 'article', params[:article] if params[:article] %>
 
         <%= link_to selection_produit_path(article: params[:article]), class: 'btn btn-outline-danger rounded mx-1' do %>
-          <i class="fa fa-xl fa-circle-xmark"></i>
+          <i class="bi bi-xl bi-check2-circle"></i>
         <% end %>
         
         <%= f.button class: 'btn btn-outline-success rounded mx-1' do %>
-          <i class="fa fa-xl fa-search mx-3"></i>
+          <i class="bi bi-xl bi-search mx-3"></i>
         <% end %>        
       </div>
 
@@ -41,7 +41,7 @@
         <%= button_to config[:path], class: "btn btn-outline-primary m-2 btn-topic m-2 px-4",
           data: { controller: "button-color", action: "click->button-color#handleClick" },
           "data-original-color": config[:color] do %>
-          <i class="fa fa-solid fa-xl <%= config[:icon] %> <%= config[:color] %> <%= config[:text].downcase.parameterize %> <%= config[:color] %>" data-target="button-color.icon"></i>
+          <i class="bi bi-solid bi-xl <%= config[:icon] %> <%= config[:color] %> <%= config[:text].downcase.parameterize %> <%= config[:color] %>" data-target="button-color.icon"></i>
           <span class="ms-1 fw-bold text-dark"><%= config[:text] %></span>
         <% end %>
       <% end %>
