--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -7,13 +7,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav me-auto my-2 my-lg-0">
-        <%= nav_link(home_admin_path, "Accueil", "fa-house") %>
-        <%= nav_link(clients_path, "Clients", "fa-user") %>
-        <%= nav_link(produits_path, "Produits", "fa-shirt") %>
-        <%= nav_link(commandes_path, "Commandes", "fa-file-invoice") %>
-        <%= nav_link(meetings_path, "Calendrier", "fa-calendar") %>
-        <%= nav_link(analyses_index_path, "Analyses", "fa-chart-line") %>
-        <%= nav_link(root_path, "Marketing", "fa-bullhorn") %>
+        <%= nav_link(home_admin_path, "Accueil", "bi-house") %>
+        <%= nav_link(clients_path, "Clients", "bi-person") %>
+        <%= nav_link(produits_path, "Produits", "bi-person-standing-dress") %>
+        <%= nav_link(commandes_path, "Commandes", "bi-file-earmark-post") %>
+        <%= nav_link(meetings_path, "Calendrier", "bi-calendar-date") %>
+        <%= nav_link(analyses_index_path, "Analyses", "bi-graph-up-arrow") %>
+        <%= nav_link(root_path, "Marketing", "bi-flag") %>
       </ul>
       <!--form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Recherche..." aria-label="Search">
