--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,8 +1,8 @@
 <%= card_main_model(
   "Articles", 
-  "shirt", 
+  "person-standing-dress", 
   link_to("", selection_produit_path(commande: @commande), 
-  class: "bi bi-plus-lg btn btn-warning fw-bold"
+  class: "bi bi-plus-lg btn btn-sm btn-warning fw-bold"
 )) %>
 
 <div class="collapse" id="collapseNewArticle">
