--- a/app/views/avoir_rembs/_avoir_rembs.html.erb
+++ b/app/views/avoir_rembs/_avoir_rembs.html.erb
@@ -1,9 +1,9 @@
 <%= card_main_model(
   "Avoir-Remb.", 
-  "money-bill-transfer",
+  "cash-stack",
   link_to("", 
   "#collapseNewAAvoirremb", 
-  class: "bi bi-plus-lg btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-sm btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewAAvoirremb" })) %>
 
