--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= card_main_model("Commande", "file", "") %>
+<%= card_main_model("Commande", "file-earmark-fill", "") %>
 
 <%= render @commande %>
 
