--- a/app/views/ensembles/index.html.erb
+++ b/app/views/ensembles/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Ensembles", "group", @ensembles.count, 
+<%= bandeau_entete("Ensembles", "collection", @ensembles.count, 
     :produit_nom_cont, ensembles_path) %>
 
 <%= bloc_nouveau(Ensemble) %>
