--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -1,8 +1,8 @@
 <%= card_main_model(
   "Rendez-vous", 
-  "calendar", 
+  "calendar-date", 
   link_to("", "#collapseNewMeeting", 
-  class: "bi bi-plus-lg btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-sm btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewMeeting" })) %>
 
