--- a/app/views/clients/_client_mini.html.erb
+++ b/app/views/clients/_client_mini.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id client %>"class="my-2">
 
-  <%= card_main_model("Client", "user") %>
+  <%= card_main_model("Client", "person-fill") %>
 
   <div class="card mx-2 mb-3 p-1 light-beige-colored shadow-sm">
 
