--- a/app/views/paiement_recus/_paiement_recus.html.erb
+++ b/app/views/paiement_recus/_paiement_recus.html.erb
@@ -1,8 +1,8 @@
 <%= card_main_model(
   "Paiements", 
-  "money", 
+  "cash", 
   link_to("", "#collapseNewPaiement", 
-  class: "bi bi-plus-lg btn btn-warning fw-bold", 
+  class: "bi bi-plus-lg btn btn-sm btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewPaiement" })) %>
 
