--- a/app/views/sousarticles/_sousarticle.html.erb
+++ b/app/views/sousarticles/_sousarticle.html.erb
@@ -27,7 +27,7 @@
         <%= link_to "", "#collapseSousarticle#{dom_id(sousarticle)}", 
               class: "btn btn-sm btn-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
               role: "button", "aria-expanded": "false", "aria-controls": "collapseSousarticle#{dom_id(sousarticle)}" %>
-        <%= button_to "", edit_sousarticle_path(sousarticle), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
+        <%= button_to "", edit_sousarticle_path(sousarticle), method: :post, class: "btn btn-sm btn-secondary bi bi-pencil-square m-1" %>
         <%= button_to "", sousarticle, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger bi bi-trash m-1" %>
       </div>
 
