--- a/app/views/fournisseurs/index.html.erb
+++ b/app/views/fournisseurs/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Fournisseurs", "layer-group", @fournisseurs.count, 
+<%= bandeau_entete("Fournisseurs", "buildings", @fournisseurs.count, 
 :nom_or_tel_or_mail_cont, fournisseurs_path) %>
 
 <%= bloc_nouveau(Fournisseur) %>
