--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Profiles", "user-circle", @profiles.count, :nom_or_prenom_cont, profiles_path) %>
+<%= bandeau_entete("Profiles", "bi-person-check", @profiles.count, :nom_or_prenom_cont, profiles_path) %>
 
 <%= bloc_nouveau(Profile) %>
 
