fixing ensemble with multiple options and ordering on reffrs if conditions matched

--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -12,7 +12,7 @@
           <%= custom_badge("", "", "", "", commande.type_locvente) if commande.type_locvente %>
           <%= custom_badge("fa-calendar", "", "", "", commande.full_event) %>
 
-          <%= custom_badge("", "", "", "", commande.profile&.nom) %>
+          <%= custom_badge("", "", "", "", commande.profile&.prenom) %>
 
           <%= link_to "", "#collapseCommande#{dom_id(commande)}", 
             class: "btn btn-sm btn-outline-primary bi bi-eye m-1", "data-bs-toggle": "collapse", 
@@ -38,7 +38,7 @@
         <%= field_with_label("debutloc: ", commande.debutloc)  %>
         <%= field_with_label("finloc: ", commande.finloc)  %>
         <%= field_with_label("dateevent: ", commande.dateevent)  %>
-        <%= field_with_label("commentaires: ", commande.commentaires)  %>
+        <%= field_with_label("commentaires: ", commande.commentaires) %>
         <%= field_with_label("devis: ", commande.devis)  %>
       
 
