--- a/app/views/produits/show.html.erb
+++ b/app/views/produits/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= card_main_model("Produit", "shirt") %>
+<%= card_main_model("Produit", "person-standing-dress") %>
 
 <%= render @produit %>
 
