--- a/app/views/etiquettes/index.html.erb
+++ b/app/views/etiquettes/index.html.erb
@@ -4,7 +4,7 @@
   <%= index_search_form(@q, etiquettes_path, :nom_or_reffrs_or_handle_or_categorie_produit_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont ) %>
 
   <% if session[:selection_etiquettes].present? %>
-    <div class="d-flex align-items-center m-2">
+    <div class="d-flex flex-wrap align-items-center m-2">
       <strong> Sélection active :  </strong>
 
       <% session[:selection_etiquettes].each do |produit| %>
