--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -16,8 +16,7 @@
 
     </div>
 
-    <div class= "card-body p-2 light-beige-colored text-center">
-
+    <div class= "card-body p-2 light-beige-colored text-center gap-2">
         <%= options_supplementaires_link(users_path, "bi-person-circle", "Comptes", "btn-outline-primary") %>
         <%= options_supplementaires_link(profiles_path, "bi-person-check", "Profiles", "btn-outline-dark") %>
         <%= options_supplementaires_link(root_path, "bi-flag", "Marketing", "btn-outline-warning") %>
