--- a/app/views/commande_mailer/email_commande.text.erb
+++ b/app/views/commande_mailer/email_commande.text.erb
@@ -1,13 +1,5 @@
-  <body>
-    <h1>Commande email</h1>
+<%= @doc_edition.message %>
 
-    <p> <%= @doc_edition.message %>,</p>
-
-
-        <% if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
-            <p>  Prochain RDV: <%= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %> </p>
-        <% end %>
-        
-  </body>
-
-  <%= render 'shared/mailer_footer' %>
+<% if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
+  Prochain RDV: <%= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %>
+<% end %>
