--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -37,6 +37,7 @@
         <%= field_with_label("ville: ", client.ville)  %>
         <%= field_with_label("pays: ", client.pays)  %>
         <%= field_with_label("contact: ", client.contact)  %>
+        <%= field_with_label("langue: ", client.language)  %>
 
       </div>
 
