--- a/app/views/commande_mailer/email_commande.html.erb
+++ b/app/views/commande_mailer/email_commande.html.erb
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Commande email</h1>
+    <%= simple_format(@doc_edition.message) %>
 
-    <p> <%= @doc_edition.message %>,</p>
-
-
-    <% if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
-        <p>  Prochain RDV: <%= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %> </p>
-    <% end %>
+    <%# if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
+        <!--p>  Prochain RDV: <%= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %> </p-->
+    <%# end %>
     
   </body>
-
-  <footer>
-    <%= render 'shared/mailer_footer' %>
-  </footer>
 
 </html>
