--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,8 +1,14 @@
-
+<!-- app/views/layouts/mailer.html.erb -->
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+  </head>
   <body>
-    <%= yield %>
-    <hr>
+    <%= yield %> <!-- This will insert the email content (body) -->
+
+    <footer style="">
+      <%= render 'shared/mailer_footer' %>
+    </footer>
   </body>
 </html>
