--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,4 +1,3 @@
 <%= yield %>
 
-Autour d'un soir - Cannes
-04 93 00 00 00
+<%#= strip_tags(render('shared/mailer_footer')).gsub('&nbsp;', ' ').gsub(/\s+/, ' ') %>
