--- a/app/views/commande_mailer/email_commande.html.erb
+++ b/app/views/commande_mailer/email_commande.html.erb
@@ -4,7 +4,7 @@
     <%= simple_format(@doc_edition.message) %>
 
     <%# if @doc_edition.commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
-        <!--p>  Prochain RDV: <%= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %> </p-->
+        <!--p>  Prochain RDV: <%#= @doc_edition.commande.meetings.first.start_time.strftime('%d/%m/%y à %H:%M') %> </p-->
     <%# end %>
     
   </body>
