--- a/app/views/produits/_commandes_liees.html.erb
+++ b/app/views/produits/_commandes_liees.html.erb
@@ -15,9 +15,8 @@
                         <%= custom_badge("", "", "", "fw-bold", commande.client.full_name ) %>
                         <%= custom_badge("", "", "", "", commande.full_name ) %>
                         <%= custom_badge("", "", "", "", commande.type_locvente ) %>
-                        <%= custom_badge("", "", "", "", commande.debutloc ) %>
-                        <%= custom_badge("", "", "", "", commande.finloc ) %>
-
+                        <%= custom_badge("", "", "", "", format_date_in_french(commande.debutloc) ) %>
+                        <%= custom_badge("", "", "", "", format_date_in_french(commande.finloc) ) %>
                     </div>
                 <% end %>
                 
